--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -263,3 +263,4 @@ cards:
           area: server_closet
           humidity_sensor: sensor.office_climate_humidity
           temperature_sensor: sensor.office_climate_air_temperature
+          navigate: lab
