--- a/entities/templates/last_scene.yaml
+++ b/entities/templates/last_scene.yaml
@@ -4,18 +4,18 @@
 #####
 
 - sensor:
-  - name: Last scene
-    unique_id: b1b1fb2e-c247-4396-88cc-91f919391207
-    state: "{{ states.scene | sort(attribute='state', reverse=true) | map(attribute='name') | first | default('Unknown') }}"
-    icon: "{{ states.scene | sort(attribute='state', reverse=true) | map(attribute='attributes') | map(attribute='icon') | first | default('mdi:cancel') }}"
-    attributes:
-      color: >-
-        {% set s = states.scene | sort(attribute='state', reverse=true) | map(attribute='name') | first | default('Unknown') %}
-        {% if s == 'Home' %} green
-        {% elif s == 'Away' %} red
-        {% elif s == 'Night' %} purple
-        {% elif s == 'Vacation' %} blue
-        {% elif s == 'Morning' %} yellow
-        {% elif s == 'Evening' %} pink
-        {% else %} grey
-        {% endif %}
+    - name: Last scene
+      unique_id: b1b1fb2e-c247-4396-88cc-91f919391207
+      state: "{{ states.scene | selectattr('entity_id', 'in', label_entities('Scenes')) | sort(attribute='state', reverse=true) | map(attribute='name') | first | default('Unknown') }}"
+      icon: "{{ states.scene | selectattr('entity_id', 'in', label_entities('Scenes')) | sort(attribute='state', reverse=true) | map(attribute='attributes') | map(attribute='icon') | first | default('mdi:cancel') }}"
+      attributes:
+        color: >-
+          {% set s = states.scene | selectattr('entity_id', 'in', label_entities('Scenes')) | sort(attribute='state', reverse=true) | map(attribute='name') | first | default('Unknown') %}
+          {% if s == 'Home' %} green
+          {% elif s == 'Away' %} red
+          {% elif s == 'Night' %} purple
+          {% elif s == 'Vacation' %} blue
+          {% elif s == 'Morning' %} yellow
+          {% elif s == 'Evening' %} pink
+          {% else %} grey
+          {% endif %}
