--- a/ui_lovelace_minimalist/dashboard/views/rooms/garage.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/garage.yaml
@@ -163,6 +163,12 @@ cards:
           - node_number: 6
 
       - type: custom:decluttering-card
+        template: z_wave_motion
+        variables:
+          - sensor_prefix: cat_shit
+          - node_number: 53
+
+      - type: custom:decluttering-card
         template: z_wave_plug
         variables:
           - sensor_prefix: garage_opener
