automation readme updates

--- a/automations/systems/auto_close_alerts.yaml
+++ b/automations/systems/auto_close_alerts.yaml
@@ -20,6 +20,7 @@ conditions:
         value_template: >
           {{ trigger.notification.notification_id in
             [
+              'cat_shit',
               'dishwasher_done',
               'dryer_done',
               'rolo_done'
