--- a/automations/systems/ha_log_event_trigger.yaml
+++ b/automations/systems/ha_log_event_trigger.yaml
@@ -10,7 +10,7 @@ trigger:
   trigger: event
   event_type: system_log_event
   event_data:
-    level: !include
+    level:
       - ERROR
       - WARNING
 
