--- a/automations/systems/unmute_people.yaml
+++ b/automations/systems/unmute_people.yaml
@@ -7,15 +7,15 @@ alias: Unmute People
 id: 3b28a43a-ba67-4578-b3e2-bafd18f90c15
 
 trigger:
-  - trigger: state
-    entity_id:
-      - input_boolean.gina_mute
-      - input_boolean.poat_mute
-    to: 'on'
-    for:
-      hours: 1
+  trigger: state
+  entity_id:
+    - input_boolean.gina_mute
+    - input_boolean.poat_mute
+  to: 'on'
+  for:
+    hours: 1
 
 action:
-  - action: input_boolean.turn_off
-    target:
-      entity_id: '{{ trigger.entity_id }}'
+  action: input_boolean.turn_off
+  target:
+    entity_id: '{{ trigger.entity_id }}'
