--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,6 @@
 custom_components
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
-#ip_bans.yaml
-#secrets.yaml
-#known_devices.yaml
+ip_bans.yaml
+secrets.yaml
+known_devices.yaml
