more readmes cleaned up scripts

--- a/scripts/systems/shutdown_home_assistant.yaml
+++ b/scripts/systems/shutdown_home_assistant.yaml
@@ -5,7 +5,9 @@
 
 shutdown_home_assistant:
   alias: Shutdown Home Assistant
+
   sequence:
-    - service: hassio.host_shutdown
+    action: hassio.host_shutdown
+
   mode: single
   icon: mdi:power
