--- a/scripts/systems/reboot_home_assistant.yaml
+++ b/scripts/systems/reboot_home_assistant.yaml
@@ -5,7 +5,9 @@
 
 reboot_home_assistant:
   alias: Reboot Home Assistant
+
   sequence:
-    - service: hassio.host_reboot
+    action: hassio.host_reboot
+
   mode: single
   icon: mdi:restart
