--- a/ui_lovelace_minimalist/custom_cards/layout/room_header.yaml
+++ b/ui_lovelace_minimalist/custom_cards/layout/room_header.yaml
@@ -4,6 +4,7 @@ room_header:
     - responsive_variables
     - discovery_variables
     - grid_two_columns
+    - no_background
     - no_click
 
   variables:
