--- a/ui_lovelace_minimalist/custom_cards/layout/mainview_header.yaml
+++ b/ui_lovelace_minimalist/custom_cards/layout/mainview_header.yaml
@@ -3,6 +3,7 @@ mainview_header:
   template:
     - discovery_variables
     - grid_two_columns
+    - no_background
     - no_click
 
   variables:
